# tutor-contrib-saleor

./: .hatch_build.py  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorsaleor/: plugin.py
tutorsaleor/patches/: caddyfile  k8s-deployments  k8s-services  local-docker-compose-services  openedx-lms-development-settings  openedx-lms-production-settings
